--- a/app/styles/education.css
+++ b/app/styles/education.css
@@ -17,8 +17,8 @@
     font-weight: bold;
     width: 90%;
     margin: 1rem auto;
+    margin-top:30vh;
     margin-bottom: 1rem;
-    padding-top: 12rem;
 }
 
 .education-section h2 {
@@ -42,4 +42,5 @@
     margin: 1rem auto;
     background-color: white;
     box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15vh;
 }
